Created utility scripts for launching app.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=reporting
-input.path.html=C:\\html
-output.path.pdf=C:\\pdf
+input.path.html=/home/ezagoni/html
+output.path.pdf=/home/ezagoni/pdf
