--- a/fe-designer-dragdrop/angular.json
+++ b/fe-designer-dragdrop/angular.json
@@ -34,7 +34,10 @@
               }
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "node_modules/quill/dist/quill.core.css",
+              "node_modules/quill/dist/quill.snow.css",
+              "node_modules/quill/dist/quill.bubble.css"
             ]
           },
           "configurations": {
