--- a/fe-designer-dragdrop/package.json
+++ b/fe-designer-dragdrop/package.json
@@ -28,6 +28,10 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "ngx-quill": "^28.0.1",
+    "quill": "^2.0.3",
+    "quill-delta": "^5.1.0",
+    "quill-image-resize-module": "^3.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
