Fix concurrency problems.

--- a/xhtml2pdf/src/main/resources/application.properties
+++ b/xhtml2pdf/src/main/resources/application.properties
@@ -4,14 +4,17 @@ spring.mvc.async.request-timeout=PT2M
 spring.mvc.problemdetails.enabled=true
 spring.servlet.multipart.max-request-size=64MB
 spring.servlet.multipart.max-file-size=64MB
-spring.codec.max-in-memory-size=64MB
+spring.codec.max-in-memory-size=100MB
+spring.jackson.parser.allow-unquoted-field-names=true
 
-server.http2.enabled=true
+server.http2.enabled=false
 server.tomcat.protocol=org.apache.coyote.http11.Http11Nio2Protocol
-server.tomcat.max-connections=10000
-server.tomcat.accept-count=2000
+server.tomcat.max-connections=1000
+server.tomcat.accept-count=200
 server.tomcat.threads.max=200
 server.tomcat.connection-timeout=20s
+server.tomcat.max-http-post-size=104857600
+server.max-http-request-header-size=100KB
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/pdf,text/html
 server.compression.min-response-size=1024
