feat: invoice-parser triggers PDF generation via xhtml2pdf using invoiceType template

--- a/invoice-parser/src/main/resources/application.properties
+++ b/invoice-parser/src/main/resources/application.properties
@@ -10,3 +10,5 @@ zip.queue-capacity=20000
 zip.poll-fallback-seconds=30
 json.output.folder=C:/invoice-data/_json
 json.pretty=false
+pdf.output.folder=C:/invoice-data/_pdf
+xhtml2pdf.base-url=http://localhost:8080
