--- a/invoice-parser/src/main/resources/application.properties
+++ b/invoice-parser/src/main/resources/application.properties
@@ -2,13 +2,15 @@ spring.application.name=invoice-parser
 zip.input-folder=C:/invoice-data
 zip.archive-folder=C:/invoice-data/_processed
 zip.error-folder=C:/invoice-data/_error
-# virtual threads \u2192 high concurrency, adjust per IO
+# Multi-threading configuration (similar to invoice-processor)
 zip.concurrent-workers=64
-# backpressure for watch bursts
-zip.queue-capacity=20000
-# periodic rescan in case of watcher OVERFLOW
+zip.queue-capacity=256
 zip.poll-fallback-seconds=30
+# PDF conversion concurrency control
+pdf.max-concurrent-conversions=64
 json.output.folder=C:/invoice-data/_json
 json.pretty=false
 pdf.output.folder=C:/invoice-data/_pdf
 xhtml2pdf.base-url=http://localhost:6969
+xhtml2pdf.request-timeout=PT2M
+xhtml2pdf.connect-timeout=PT5S
