--- a/fe-designer-dragdrop/package.json
+++ b/fe-designer-dragdrop/package.json
@@ -34,6 +34,7 @@
     "quill-delta": "^5.1.0",
     "quill-image-resize-module": "^3.0.0",
     "rxjs": "~7.8.2",
+    "text-to-image": "^8.0.1",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
   },
