Auto-reload templates on file change.

--- a/invoice-parser/src/main/resources/application.properties
+++ b/invoice-parser/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=invoice-parser
+templates.for-pdf.path=for-pdf
 zip.input-folder=C:/invoice-data
 zip.archive-folder=C:/invoice-data/_processed
 zip.error-folder=C:/invoice-data/_error
