--- a/invoice-parser/src/main/resources/application.properties
+++ b/invoice-parser/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=invoice-parser
 templates.for-pdf.path=for-pdf
-zip.input-folder=C:/invoice-data
-zip.archive-folder=C:/invoice-data/_processed
-zip.error-folder=C:/invoice-data/_error
+zip.input-folder=C:/_invoice-data
+zip.archive-folder=C:/_processed
+zip.error-folder=C:/_error
 # Multi-threading configuration (similar to invoice-processor)
 zip.concurrent-workers=64
 zip.queue-capacity=256
 zip.poll-fallback-seconds=30
 # PDF conversion concurrency control
 pdf.max-concurrent-conversions=64
-json.output.folder=C:/invoice-data/_json
+json.output.folder=C:/_json
 json.pretty=false
-pdf.output.folder=C:/invoice-data/_pdf
+pdf.output.folder=C:/_pdf
 xhtml2pdf.base-url=http://localhost:6969
 xhtml2pdf.request-timeout=PT2M
 xhtml2pdf.connect-timeout=PT5S
