--- a/invoice-parser/pom.xml
+++ b/invoice-parser/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.7</version>
+		<version>4.0.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>nl.infomedics</groupId>
@@ -29,7 +29,7 @@
 	</scm>
 	<properties>
 		<java.version>25</java.version>
-		<spring-boot.version>3.5.7</spring-boot.version>
+		<spring-boot.version>4.0.0</spring-boot.version>
 		<maven.compiler.release>${java.version}</maven.compiler.release>
 		<maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
 		<lombok.version>1.18.42</lombok.version>
@@ -69,6 +69,19 @@
 			<artifactId>invoice-models</artifactId>
 			<version>${invoice-models.version}</version>
 		</dependency>
+		<!-- Jackson (align with Spring Boot-managed versions) -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>						
 		<!-- Ultra-fast CSV/TSV parsing (semicolon) -->
 		<dependency>
 			<groupId>com.univocity</groupId>
@@ -121,21 +134,14 @@
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <configuration>
                         <skip>false</skip>
+						<excludes>
+							<exclude>
+								<groupId>org.projectlombok</groupId>
+								<artifactId>lombok</artifactId>
+							</exclude>
+						</excludes>
                     </configuration>
                 </plugin>
-    		<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<executable>true</executable>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 </project>
