--- a/fe-designer/package.json
+++ b/fe-designer/package.json
@@ -28,28 +28,28 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "ngx-quill": "^28.0.1",
-    "qrcode-svg": "^1.1.0",
-    "quill": "^2.0.3",
-    "quill-delta": "^5.1.0",
-    "quill-image-resize-module": "^3.0.0",
-    "rxjs": "~7.8.2",
-    "text-to-image": "^8.0.1",
-    "tslib": "^2.8.1",
-    "zone.js": "~0.15.1"
+    "ngx-quill": "29.1.0",
+    "qrcode-svg": "1.1.0",
+    "quill": "2.0.3",
+    "quill-delta": "5.1.0",
+    "quill-image-resize-module": "3.0.0",
+    "rxjs": "7.8.2",
+    "text-to-image": "8.0.1",
+    "tslib": "2.8.1",
+    "zone.js": "0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^21.0.0",
     "@angular/cli": "^21.0.0",
     "@angular/compiler-cli": "^21.0.0",
-    "@types/jasmine": "~5.1.12",
-    "jasmine-core": "~5.12.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.1",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "less": "^4.4.2",
-    "typescript": "~5.9.3"
+    "@types/jasmine": "5.1.13",
+    "jasmine-core": "5.12.1",
+    "karma": "6.4.4",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.1",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "less": "4.4.2",
+    "typescript": "5.9.3"
   }
 }
