--- a/pdf-creator/pom.xml
+++ b/pdf-creator/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>nl.infomedics</groupId>
-	<artifactId>xhtml2pdf</artifactId>
+	<artifactId>pdf-creator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>xhtml2pdf</name>
-	<description>XHTML to Pdf converter</description>
+	<name>pdf-creator</name>
+	<description>pdf-creator: xhtml to pdf converter</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -44,11 +44,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>nl.infomedics</groupId>
-			<artifactId>invoice-parser</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.openhtmltopdf</groupId>
@@ -127,5 +122,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
