--- a/pdf-creator/src/main/resources/application.properties
+++ b/pdf-creator/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=xhtml2pdf
+spring.application.name=pdf-creator
 spring.threads.virtual.enabled=true
 spring.mvc.async.request-timeout=PT2M
 spring.mvc.problemdetails.enabled=true
@@ -21,4 +21,4 @@ server.compression.min-response-size=1024
 server.shutdown=graceful
 
 # Html2Pdf converter tuning
-converter.max-concurrent=64
+converter.max-concurrent=16
