Created performance-benchmark module.

--- a/invoice-parser/pom.xml
+++ b/invoice-parser/pom.xml
@@ -135,6 +135,7 @@
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <configuration>
                         <skip>${spring-boot.repackage.skip}</skip>
+                        <classifier>exec</classifier>
 						<excludes>
 							<exclude>
 								<groupId>org.projectlombok</groupId>
