Created auto-tune benchmark script.

--- a/performance-benchmark/pom.xml
+++ b/performance-benchmark/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring-boot.version}</version>
         </dependency>
+        <dependency>
+            <groupId>net.datafaker</groupId>
+            <artifactId>datafaker</artifactId>
+            <version>2.5.3</version>
+        </dependency>
     </dependencies>
 
     <build>
