--- a/pdf-creator/src/main/resources/application.properties
+++ b/pdf-creator/src/main/resources/application.properties
@@ -19,6 +19,8 @@ server.compression.enabled=true
 server.compression.mime-types=application/json,application/pdf,text/html
 server.compression.min-response-size=1024
 server.shutdown=graceful
+server.port=6969
+server.address=0.0.0.0
 
 # Html2Pdf converter tuning
-converter.max-concurrent=16
+converter.max-concurrent=32
