--- a/invoice-parser/src/main/resources/application.properties
+++ b/invoice-parser/src/main/resources/application.properties
@@ -1,17 +1,49 @@
+# Standard Spring application name
 spring.application.name=invoice-parser
+
+# Path to the folder containing PDF templates (used by TemplateHtmlConfig)
 templates.for-pdf.path=for-pdf
+
+# Directory to watch for incoming ZIP files (used by FileWatchRunner)
 zip.input-folder=C:/_invoice-data
+
+# Directory where processed ZIP files are moved (used by ZipIngestService)
 zip.archive-folder=C:/_processed
+
+# Directory where failed ZIP files are moved (used by ZipIngestService and FileWatchRunner)
 zip.error-folder=C:/_error
-# Multi-threading configuration (similar to invoice-processor)
-zip.concurrent-workers=32
-zip.queue-capacity=256
-zip.poll-fallback-seconds=30
-# PDF conversion concurrency control
-pdf.max-concurrent-conversions=8
+
+# Directory where generated JSON files are saved (used by ZipIngestService)
 json.output.folder=C:/_json
-json.pretty=false
+
+# Directory where generated PDF files are saved (used by ZipIngestService)
 pdf.output.folder=C:/_pdf
+
+# Multi-threading configuration (similar to invoice-processor)
+# Maximum number of concurrent ZIP processing threads (used by FileWatchRunner)
+zip.concurrent-workers=32
+
+# Capacity of the ZIP processing queue (used by FileWatchRunner)
+zip.queue-capacity=256
+
+# Interval in seconds for the fallback poller to rescan the input folder (used by FileWatchRunner)
+zip.poll-fallback-seconds=30
+
+# PDF conversion concurrency control
+# - Meaning: This property limits the number of concurrent batch requests that the invoice-parser service sends to the pdf-creator service.
+# - Mechanism: It sets the size of the thread pool and semaphore in ZipIngestService. This means invoice-parser will process at most 8 ZIP 
+#   files (specifically the PDF generation phase of them) simultaneously.
+# - Role: It acts as a client-side throttle to prevent overwhelming the pdf-creator service or the network.
+pdf.max-concurrent-conversions=8
+
+# Whether to pretty-print the generated JSON (used by ZipIngestService)
+json.pretty=false
+
+# Base URL of the external pdf-creator service (used by Xhtml2PdfClient)
 xhtml2pdf.base-url=http://localhost:6969
+
+# Timeout for requests to the pdf-creator service (used by Xhtml2PdfClient)
 xhtml2pdf.request-timeout=PT2M
+
+# Connection timeout for the pdf-creator service client (used by Xhtml2PdfClient)
 xhtml2pdf.connect-timeout=PT5S
