--- a/pdf-creator/src/main/resources/application.properties
+++ b/pdf-creator/src/main/resources/application.properties
@@ -1,26 +1,76 @@
+# Standard Spring application name
 spring.application.name=pdf-creator
+
+# Enables Java 21 virtual threads for Spring Boot
 spring.threads.virtual.enabled=true
+
+# Timeout for async MVC requests
 spring.mvc.async.request-timeout=PT2M
+
+# Enables RFC 7807 Problem Details for HTTP APIs
 spring.mvc.problemdetails.enabled=true
+
+# Max size for multipart requests
 spring.servlet.multipart.max-request-size=64MB
+
+# Max size for individual files in multipart requests
 spring.servlet.multipart.max-file-size=64MB
+
+# Max memory buffer for codecs (e.g. DataBuffer)
 spring.codec.max-in-memory-size=100MB
+
+# Allows unquoted field names in JSON parsing
 spring.jackson.parser.allow-unquoted-field-names=true
 
+# Enables HTTP/2 support
 server.http2.enabled=false
+
+# Tomcat protocol handler class
 server.tomcat.protocol=org.apache.coyote.http11.Http11Nio2Protocol
+
+# Max number of connections that the server accepts and processes
 server.tomcat.max-connections=1000
+
+# Max queue length for incoming connection requests when all threads are busy
 server.tomcat.accept-count=200
+
+# Max number of worker threads for Tomcat
 server.tomcat.threads.max=200
+
+# Timeout for establishing a connection
 server.tomcat.connection-timeout=20s
+
+# Max size of the HTTP POST body
 server.tomcat.max-http-post-size=104857600
+
+# Max size of the HTTP request header
 server.max-http-request-header-size=100KB
+
+# Enables HTTP response compression
 server.compression.enabled=true
+
+# MIME types to compress
 server.compression.mime-types=application/json,application/pdf,text/html
+
+# Minimum response size to trigger compression
 server.compression.min-response-size=1024
+
+# Graceful shutdown mode
 server.shutdown=graceful
+
+# Server HTTP port
 server.port=6969
+
+# Server bind address
 server.address=0.0.0.0
 
 # Html2Pdf converter tuning
+# - Meaning: This property sets the maximum number of concurrent PDF conversions allowed to execute simultaneously inside the pdf-creator service logic.
+# - Mechanism: It sets the number of permits in a Semaphore within Html2PdfConverterService.
+# - Role: It acts as a server-side safety cap. However, the pdf-creator also uses a thread pool (pdfConversionExecutor) sized to the number of CPU cores.
+# - Note: Since the thread pool is limited to CPU cores, the effective concurrency is min(64,CPU_CORES). Unless the server has 64+ cores, the CPU core 
+#   count will be the actual bottleneck, not this property.
 converter.max-concurrent=32
+
+# Default behavior for including sanitised XHTML in the conversion result
+converter.include-sanitised-xhtml=false
