--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /fe-designer-dragdrop/package-lock.json
 /fe-designer/package-lock.json
 /performance-benchmark/target/
+/performance-benchmark/docs/.obsidian
