--- a/invoice-parser/pom.xml
+++ b/invoice-parser/pom.xml
@@ -65,6 +65,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-json</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>nl.infomedics.invoicing</groupId>
 			<artifactId>invoice-models</artifactId>
@@ -147,3 +151,4 @@
 		</plugins>
 	</build>
 </project>
+
