--- a/invoice-parser/src/main/resources/application.properties
+++ b/invoice-parser/src/main/resources/application.properties
@@ -21,7 +21,7 @@ pdf.output.folder=C:/_pdf
 
 # Multi-threading configuration (similar to invoice-processor)
 # Maximum number of concurrent ZIP processing threads (used by FileWatchRunner)
-zip.concurrent-workers=8
+zip.concurrent-workers=16
 
 # Capacity of the ZIP processing queue (used by FileWatchRunner)
 zip.queue-capacity=256
@@ -34,7 +34,7 @@ zip.poll-fallback-seconds=30
 # - Mechanism: It sets the size of the thread pool and semaphore in ZipIngestService. This means invoice-parser will process at most 8 ZIP 
 #   files (specifically the PDF generation phase of them) simultaneously.
 # - Role: It acts as a client-side throttle to prevent overwhelming the pdf-creator service or the network.
-pdf.max-concurrent-conversions=6
+pdf.max-concurrent-conversions=8
 
 # Whether to pretty-print the generated JSON (used by ZipIngestService)
 json.pretty=false
@@ -47,3 +47,6 @@ xhtml2pdf.request-timeout=PT2M
 
 # Connection timeout for the pdf-creator service client (used by Xhtml2PdfClient)
 xhtml2pdf.connect-timeout=PT5S
+
+# Enable detailed diagnostics/metrics (timers, METRIC logs)
+diagnostics.metrics.enabled=false
