Set up support for Http 2

--- a/pdf-creator/src/main/resources/application.properties
+++ b/pdf-creator/src/main/resources/application.properties
@@ -23,7 +23,9 @@ spring.codec.max-in-memory-size=100MB
 spring.jackson.parser.allow-unquoted-field-names=true
 
 # Enables HTTP/2 support
-server.http2.enabled=false
+server.http2.enabled=true
+# Increase HTTP/2 header size to match HTTP/1.1 limits
+server.http2.max-header-size=100KB
 
 # Tomcat protocol handler class
 server.tomcat.protocol=org.apache.coyote.http11.Http11Nio2Protocol
@@ -42,6 +44,8 @@ server.tomcat.connection-timeout=20s
 
 # Max size of the HTTP POST body
 server.tomcat.max-http-post-size=104857600
+# Allow large request bodies to be fully read (avoid 413 on large payloads)
+server.tomcat.max-swallow-size=-1
 
 # Max size of the HTTP request header
 server.max-http-request-header-size=100KB
@@ -54,6 +58,15 @@ server.compression.mime-types=application/json,application/pdf,text/html
 
 # Minimum response size to trigger compression
 server.compression.min-response-size=1024
+
+# Access log to verify HTTP protocol (HTTP/2 vs HTTP/1.1)
+server.tomcat.basedir=.
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.pattern=%t %a "%r" %s %b %Dms %H
+server.tomcat.accesslog.prefix=access
+server.tomcat.accesslog.suffix=.log
+server.tomcat.accesslog.rename-on-rotate=true
 
 # Graceful shutdown mode
 server.shutdown=graceful
