Secure the API Calls: Enable mutual TLS

--- a/invoice-parser/src/main/resources/application.properties
+++ b/invoice-parser/src/main/resources/application.properties
@@ -40,7 +40,10 @@ pdf.max-concurrent-conversions=8
 json.pretty=false
 
 # Base URL of the external pdf-creator service (used by Xhtml2PdfClient)
-xhtml2pdf.base-url=http://localhost:6969
+xhtml2pdf.base-url=https://localhost:6969
+# Trust store for TLS to pdf-creator
+xhtml2pdf.ssl.trust-store=C:/jde/invoicing/invoice-parser/config/infomedics-trust.p12
+xhtml2pdf.ssl.trust-store-password=changeit
 
 # Timeout for requests to the pdf-creator service (used by Xhtml2PdfClient)
 xhtml2pdf.request-timeout=PT2M
