--- a/pdf-creator/src/main/resources/application.properties
+++ b/pdf-creator/src/main/resources/application.properties
@@ -74,6 +74,13 @@ server.shutdown=graceful
 # Server HTTP port
 server.port=6969
 
+# Enable TLS/SSL
+server.ssl.enabled=true
+server.ssl.key-store=C:/jde/invoicing/pdf-creator/config/infomedics-server.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=changeit
+server.ssl.key-alias=infomedics-server
+
 # Server bind address
 server.address=0.0.0.0
 
