Moved certificates into a common upper-level folder.

--- a/invoice-parser/src/main/resources/application.properties
+++ b/invoice-parser/src/main/resources/application.properties
@@ -21,7 +21,14 @@ pdf.output.folder=C:/_pdf
 
 # Multi-threading configuration (similar to invoice-processor)
 # Maximum number of concurrent ZIP processing threads (used by FileWatchRunner)
-zip.concurrent-workers=16
+zip.concurrent-workers=12
+
+# PDF conversion concurrency control
+# - Meaning: This property limits the number of concurrent batch requests that the invoice-parser service sends to the pdf-creator service.
+# - Mechanism: It sets the size of the thread pool and semaphore in ZipIngestService. This means invoice-parser will process at most 8 ZIP 
+#   files (specifically the PDF generation phase of them) simultaneously.
+# - Role: It acts as a client-side throttle to prevent overwhelming the pdf-creator service or the network.
+pdf.max-concurrent-conversions=6
 
 # Capacity of the ZIP processing queue (used by FileWatchRunner)
 zip.queue-capacity=256
@@ -29,20 +36,13 @@ zip.queue-capacity=256
 # Interval in seconds for the fallback poller to rescan the input folder (used by FileWatchRunner)
 zip.poll-fallback-seconds=30
 
-# PDF conversion concurrency control
-# - Meaning: This property limits the number of concurrent batch requests that the invoice-parser service sends to the pdf-creator service.
-# - Mechanism: It sets the size of the thread pool and semaphore in ZipIngestService. This means invoice-parser will process at most 8 ZIP 
-#   files (specifically the PDF generation phase of them) simultaneously.
-# - Role: It acts as a client-side throttle to prevent overwhelming the pdf-creator service or the network.
-pdf.max-concurrent-conversions=8
-
 # Whether to pretty-print the generated JSON (used by ZipIngestService)
 json.pretty=false
 
 # Base URL of the external pdf-creator service (used by Xhtml2PdfClient)
 xhtml2pdf.base-url=https://localhost:6969
 # Trust store for TLS to pdf-creator
-xhtml2pdf.ssl.trust-store=C:/jde/invoicing/invoice-parser/config/infomedics-trust.p12
+xhtml2pdf.ssl.trust-store=../keystore/infomedics-trust.p12
 xhtml2pdf.ssl.trust-store-password=changeit
 
 # Timeout for requests to the pdf-creator service (used by Xhtml2PdfClient)
