--- a/pdf-creator/src/main/resources/application.properties
+++ b/pdf-creator/src/main/resources/application.properties
@@ -76,7 +76,7 @@ server.port=6969
 
 # Enable TLS/SSL
 server.ssl.enabled=true
-server.ssl.key-store=C:/jde/invoicing/pdf-creator/config/infomedics-server.p12
+server.ssl.key-store=file:../keystore/infomedics-server.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=changeit
 server.ssl.key-alias=infomedics-server
@@ -90,7 +90,7 @@ server.address=0.0.0.0
 # - Role: It acts as a server-side safety cap. However, the pdf-creator also uses a thread pool (pdfConversionExecutor) sized to the number of CPU cores.
 # - Note: Since the thread pool is limited to CPU cores, the effective concurrency is min(64,CPU_CORES). Unless the server has 64+ cores, the CPU core 
 #   count will be the actual bottleneck, not this property.
-converter.max-concurrent=12
+converter.max-concurrent=128
 
 # Default behavior for including sanitised XHTML in the conversion result
 converter.include-sanitised-xhtml=false
