HTTP/2: Tweak params.

--- a/pdf-creator/src/main/resources/application.properties
+++ b/pdf-creator/src/main/resources/application.properties
@@ -26,6 +26,8 @@ spring.jackson.parser.allow-unquoted-field-names=true
 server.http2.enabled=true
 # Increase HTTP/2 header size to match HTTP/1.1 limits
 server.http2.max-header-size=100KB
+# Allow more concurrent HTTP/2 streams to reduce RST_STREAM under load
+server.http2.max-concurrent-streams=2048
 
 # Tomcat protocol handler class
 server.tomcat.protocol=org.apache.coyote.http11.Http11Nio2Protocol
