--- a/invoice-parser/src/main/resources/application.properties
+++ b/invoice-parser/src/main/resources/application.properties
@@ -51,5 +51,13 @@ xhtml2pdf.request-timeout=PT2M
 # Connection timeout for the pdf-creator service client (used by Xhtml2PdfClient)
 xhtml2pdf.connect-timeout=PT5S
 
+# OkHttp connection pool configuration for HTTP/2 stability
+# Maximum total connections in the pool
+xhtml2pdf.max-connections=200
+# Maximum idle connections to keep in the pool
+xhtml2pdf.max-idle-connections=50
+# Keep-alive duration for idle connections
+xhtml2pdf.keep-alive-duration=PT5M
+
 # Enable detailed diagnostics/metrics (timers, METRIC logs)
 diagnostics.metrics.enabled=false
