--- a/invoice-parser/pom.xml
+++ b/invoice-parser/pom.xml
@@ -34,6 +34,7 @@
 		<maven.compiler.release>${java.version}</maven.compiler.release>
 		<maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
 		<lombok.version>1.18.42</lombok.version>
+		<okhttp.version>5.3.2</okhttp.version>
 		<univocity-parsers.version>2.9.1</univocity-parsers.version>
 		<htmlcompressor.version>2.3.0</htmlcompressor.version>
 		<yuicompressor.version>2.4.8</yuicompressor.version>
@@ -102,6 +103,12 @@
 			<groupId>com.yahoo.platform.yui</groupId>
 			<artifactId>yuicompressor</artifactId>
 			<version>${yuicompressor.version}</version>
+		</dependency>
+		<!-- OkHttp 5.x for robust HTTP/2 support (JVM artifact) -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp-jvm</artifactId>
+			<version>${okhttp.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
