--- a/pdf-creator/src/main/resources/application.properties
+++ b/pdf-creator/src/main/resources/application.properties
@@ -28,6 +28,10 @@ server.http2.enabled=true
 server.http2.max-header-size=100KB
 # Allow more concurrent HTTP/2 streams to reduce RST_STREAM under load
 server.http2.max-concurrent-streams=2048
+# Increase HTTP/2 max frame size from default 16KB to handle large JSON payloads
+server.http2.max-frame-size=16MB
+# Increase HTTP/2 initial window size for better flow control with large requests
+server.http2.initial-window-size=10MB
 
 # Tomcat protocol handler class
 server.tomcat.protocol=org.apache.coyote.http11.Http11Nio2Protocol
@@ -82,6 +86,9 @@ server.ssl.key-store=file:../keystore/infomedics-server.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=changeit
 server.ssl.key-alias=infomedics-server
+# Enable TLS 1.3 and 1.2 for ALPN negotiation (required for HTTP/2)
+server.ssl.enabled-protocols=TLSv1.3,TLSv1.2
+server.ssl.protocol=TLS
 
 # Server bind address
 server.address=0.0.0.0
