helper-zip-generator added

--- a/invoice-parser/src/main/resources/application.properties
+++ b/invoice-parser/src/main/resources/application.properties
@@ -15,6 +15,8 @@ zip.error-folder=C:/_error
 
 # Directory where generated JSON files are saved (used by ZipIngestService)
 json.output.folder=C:/_json
+# Whether to really save to the Directory where generated JSON files are saved (used by ZipIngestService)
+json.output.folder.saveto=false
 
 # Directory where generated PDF files are saved (used by ZipIngestService)
 pdf.output.folder=C:/_pdf
