Added generator mode: fast

--- a/helper-input-data-creator/src/main/resources/application.properties
+++ b/helper-input-data-creator/src/main/resources/application.properties
@@ -15,7 +15,7 @@ data-generator.outputFolder=C:/_invoice-data
 data-generator.batchMinCount=1
 
 # Maximum number of ZIP files to generate per batch (inclusive)
-data-generator.batchMaxCount=50
+data-generator.batchMaxCount=150
 
 # Minimum number of invoices per ZIP file (inclusive)
 data-generator.invoiceMinCount=1
@@ -54,3 +54,9 @@ data-generator.continuousMode=true
 # Invoice types to randomly select from (comma-separated)
 # These are valid invoice types supported by the system
 data-generator.invoiceTypes=1,2,3,4,5,6,8,9,10,11,12,14,15,16,17,18,19,20,21,22,23,24,25,26,28,29,30,32,33,34,36,40,41,42,44,45,50,51,64,65,66,68
+
+# === Generation Mode ===
+# normal: current behavior (respects inter-file and marker delays)
+# fast:   machine-gun mode (no inter-file delay and skips marker delay)
+# mixed:  randomly switches between normal and fast per batch
+data-generator.generationMode=mixed
